--- a/ByteCore.Web/Views/Shared/_Navigation.cshtml
+++ b/ByteCore.Web/Views/Shared/_Navigation.cshtml
@@ -1,5 +1,4 @@
-﻿@* Views/Shared/_Navigation.cshtml *@
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-white py-3 sticky-top">
     <div class="container px-5">
         <a class="navbar-brand" href="@Url.Action("Index", "Home")">
             <span class="fw-bolder text-primary">ByteCore</span>
