--- a/ByteCore.Web/Views/Courses/Index.cshtml
+++ b/ByteCore.Web/Views/Courses/Index.cshtml
@@ -35,6 +35,7 @@
         </div>
     </div>
 </section>
+@Html.Partial("_Pager")
 
 <style>
     .course-card .card-body .d-flex.flex-column .p-4 {
