--- a/ByteCore.Web/Views/Quizzes/Index.cshtml
+++ b/ByteCore.Web/Views/Quizzes/Index.cshtml
@@ -50,6 +50,7 @@ Layout = "~/Views/Shared/_Layout.cshtml";
         </ul>
     </nav>
 </div>
+@Html.Partial("_Pager")
 
 <style>
     .card-title {
