--- a/ByteCore.Web/Views/Shared/_Layout.cshtml
+++ b/ByteCore.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/Content/styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="Content/bower_components/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="Content/assets/icon/themify-icons/themify-icons.css">
+    <link rel="stylesheet" type="text/css" href="Content/assets/icon/icofont/css/icofont.css">
+    <link rel="stylesheet" type="text/css" href="Content/assets/pages/menu-search/css/component.css">
+    <link rel="stylesheet" type="text/css" href="Content/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Content/assets/css/jquery.mCustomScrollbar.css">
     @RenderSection("HeadContent", required: false)
 </head>
 <body class="d-flex flex-column h-100">
