--- a/ByteCore.Web/Views/Admin/Index.cshtml
+++ b/ByteCore.Web/Views/Admin/Index.cshtml
@@ -15,7 +15,8 @@
                     <h4>@Model.TotalUsers</h4>
                     <div>
                                                             <span class="f-left m-t-10 text-muted">
-                                                                <i class="text-c-blue f-16 icofont icofont-refresh m-r-10"></i>Manage
+                                                                <i class="text-c-blue f-16 icofont icofont-refresh m-r-10"></i><a
+                                                                    href="@Url.Action("ManageUsers", "Admin")">Manage</a>
                                                             </span>
                     </div>
                 </div>
@@ -317,7 +318,8 @@
         <div class="col-md-12 col-xl-4">
             <div class="card card-contact-box">
                 <div class="card-body text-center">
-                    <img src="Content/assets/images/social/pro_icon.jpg" alt="ByteCore" class="rounded-circle mb-3" style="width:80px;height:80px;">
+                    <img src="Content/assets/images/social/pro_icon.jpg" alt="ByteCore" class="rounded-circle mb-3"
+                         style="width:80px;height:80px;">
                     <h6 class="fw-bold mb-1">ByteCore</h6>
                     <a href="mailto:teamlead@bytecore.com" class="d-block mb-2">teamlead@bytecore.com</a>
                     <p class="text-muted mb-3">Software Developer</p>
