--- a/ByteCore.Web/Views/Shared/_AdminNav.cshtml
+++ b/ByteCore.Web/Views/Shared/_AdminNav.cshtml
@@ -43,8 +43,8 @@
 
         <div class="pcoded-navigatio-lavel">Management</div>
         <ul class="pcoded-item pcoded-left-item">
-            <li class="@(isActive("Admin", "Users") ? "active" : "")">
-                <a href="@Url.Action("Users", "Admin")">
+            <li class="@(isActive("Admin", "ManageUsers") ? "active" : "")">
+                <a href="@Url.Action("ManageUsers", "Admin")">
                     <span class="pcoded-micon"><i class="ti-crown"></i><b>MU</b></span>
                     <span class="pcoded-mtext">Manage Users</span>
                     <span class="pcoded-badge label label-warning">CFG</span>
